DOCS-879: fix link colors and active state, remove jumping icon

--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -94,23 +94,30 @@ a {
   color: var(--GW-COLOR-BRAND-1) !important;
 }
 
+a svg {
+  fill: var(--GW-COLOR-BRAND-1) !important;
+}
+
 a:hover {
   color: var(--GW-COLOR-BRAND-1-HOVER) !important;
+}
+
+a:hover svg {
+  fill: var(--GW-COLOR-BRAND-1-HOVER) !important;
+}
+
+a:active {
+  color: var(--GW-COLOR-BRAND-1-ACTIVE) !important;
+}
+
+a:active svg {
+  fill: var(--GW-COLOR-BRAND-1-ACTIVE) !important;
 }
 
 a.returnLink {
   vertical-align: middle;
   line-height: 20px;
-}
-
-a.returnLink::before {
-  content: url("/images/chevron_left-brand1-18dp.svg");
-  vertical-align: middle;
-}
-
-a.returnLink:hover::before {
-  content: url("/images/chevron_left-brand1-hover-18dp.svg");
-  vertical-align: middle;
+  font-size: 14px;
 }
 
 .docPanelContainer h1 {
@@ -221,13 +228,17 @@ a.returnLink:hover::before {
   text-decoration: none;
 }
 
+.switcher a:active {
+  background-color: var(--GW-COLOR-BRAND-1-ACTIVE);
+}
+
 .switcher a.selected {
   background-color: var(--GW-COLOR-BRAND-1);
   color: var(--GW-COLOR-TEXT-3) !important;
 }
 
 .switcher a.selected:hover {
-  background-color: var(--GW-COLOR-BRAND-1-HOVER);
+  background-color: var(--GW-COLOR-BRAND-1-ACTIVE);
   color: var(--GW-COLOR-TEXT-3-HOVER) !important;
 }
 
@@ -267,17 +278,11 @@ a.returnLink:hover::before {
 .docPanelLink a {
   color: var(--GW-COLOR-BRAND-1) !important;
 }
+
 .docPanel a:hover,
 .docPanelTransparent a:hover,
 .docPanelLink a:hover {
   color: var(--GW-COLOR-BRAND-1-HOVER) !important;
-}
-a:hover {
-  color: var(--GW-COLOR-BRAND-1-HOVER) !important;
-}
-
-a:active {
-  color: var(--GW-COLOR-BRAND-1-ACTIVE);
 }
 
 .docPanelLink {
